@@ -339,7 +339,7 @@ line
 @set ll 
 
 @code{@value{gg}. @value{hh}. @value{ll}}.
-']
+', {'test_formats' => ['xml']}]
 );
 
 our ($arg_test_case, $arg_generate, $arg_debug);
