@@ -120,6 +120,7 @@ my %entity_texts = (
   'textndash' => '--',
   'textrsquo' => "'",
   'textlsquo' => '`',
+  'formfeed' => "\f",
 );
 
 foreach my $command (keys(%Texinfo::Convert::TexinfoXML::commands_formatting)) {
@@ -357,6 +358,7 @@ while ($reader->read) {
       if (defined($reader->getAttribute('spaces'))) {
         my $spaces = $reader->getAttribute('spaces');
         $spaces =~ s/\\n/\n/g;
+        $spaces =~ s/\\f/\f/g;
         print $spaces;
       }
       if (defined($reader->getAttribute('leadingtext'))) {
@@ -418,7 +420,9 @@ while ($reader->read) {
     }
     if ($reader->hasAttributes() 
         and defined($reader->getAttribute('trailingspaces'))) {
-      print $reader->getAttribute('trailingspaces');
+      my $trailingspaces = $reader->getAttribute('trailingspaces');
+      $trailingspaces =~ s/\\f/\f/g;
+      print $trailingspaces;
     }
   } elsif ($reader->nodeType() eq XML_READER_TYPE_ENTITY_REFERENCE) {
     if (defined($entity_texts{$name})) {
